# rfid_jukebox

./: .gitignore  LICENSE  README.md  pyproject.toml  run_service.py  service.config.json
service/: nfc_jukebox.service  rfid_jukebox.service
