[tool.poetry]
name = "RFID Jukebox"
version = "0.1.0"
description = "Scan a RFID tag - play a song. Project for RaspberryPI and RFID reader interacting as a keyboard (HID)"
authors = ["Adam Benda <adam@adasek.cz>"]
readme = "README.md"
packages = [{include = "rfid_jukebox"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
